--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - asttokens=3.0.0=pyhd8ed1ab_1
   - blas=2.136=openblas
   - blas-devel=3.9.0=36_h1ea3ea9_openblas
   - bottleneck=1.4.2=py310ha9d4c09_0
@@ -12,14 +13,25 @@ dependencies:
   - bzip2=1.0.8=h5eee18b_6
   - ca-certificates=2025.8.3=hbd8a1cb_0
   - charset-normalizer=3.4.3=pyhd8ed1ab_0
+  - comm=0.2.3=pyhe01879c_0
   - contourpy=1.3.1=py310hdb19cb5_0
   - cycler=0.12.1=pyhd8ed1ab_1
+  - debugpy=1.8.16=py310hbdd6827_0
+  - decorator=5.2.1=pyhd8ed1ab_0
+  - exceptiongroup=1.3.0=pyhd8ed1ab_0
+  - executing=2.2.1=pyhd8ed1ab_0
   - expat=2.7.1=h6a678d5_0
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.13.3=h4a9f257_0
   - greenlet=3.2.4=py310hbdd6827_0
   - icu=73.1=h6a678d5_0
+  - importlib-metadata=8.7.0=pyhe01879c_1
+  - ipykernel=6.30.1=pyh82676e8_0
+  - ipython=8.37.0=pyh8f84b5b_0
+  - jedi=0.19.2=pyhd8ed1ab_1
   - jpeg=9e=h166bdaf_1
+  - jupyter_client=8.6.3=pyhd8ed1ab_1
+  - jupyter_core=5.8.1=pyh31011fe_0
   - kiwisolver=1.4.8=py310h6a678d5_0
   - lcms2=2.16=h92b89f2_1
   - ld_impl_linux-64=2.40=h12ee557_0
@@ -38,6 +50,7 @@ dependencies:
   - liblapacke=3.9.0=36_h6ae95b6_openblas
   - libopenblas=0.3.30=h46f56fc_0
   - libpng=1.6.39=h5eee18b_0
+  - libsodium=1.0.18=h36c2ea0_1
   - libstdcxx-ng=11.2.0=h1234567_1
   - libtiff=4.7.0=hde9077f_0
   - libuuid=1.41.5=h5eee18b_0
@@ -46,8 +59,10 @@ dependencies:
   - libzlib=1.3.1=hb25bd0a_0
   - lz4-c=1.9.4=h6a678d5_1
   - matplotlib-base=3.10.6=py310h71dd3da_0
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
   - munkres=1.1.4=pyhd8ed1ab_1
   - ncurses=6.5=h7934f7d_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_1
   - nomkl=3.0=0
   - numexpr=2.11.0=py310hccd6f0b_1
   - numpy=2.1.3=py310hc213724_2
@@ -58,36 +73,56 @@ dependencies:
   - openssl=3.0.17=h5eee18b_0
   - packaging=25.0=pyh29332c3_1
   - pandas=2.3.2=py310h277b779_0
+  - parso=0.8.5=pyhcf101f3_0
+  - pexpect=4.9.0=pyhd8ed1ab_1
+  - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=11.1.0=py310hac6e08b_1
   - pip=25.2=pyhc872135_0
+  - platformdirs=4.4.0=pyhcf101f3_0
+  - prompt-toolkit=3.0.52=pyha770c72_0
+  - psutil=7.0.0=py310hee96239_0
   - pthread-stubs=0.3=h0ce48e5_1
+  - ptyprocess=0.7.0=pyhd8ed1ab_1
+  - pure_eval=0.2.3=pyhd8ed1ab_1
+  - pygments=2.19.2=pyhd8ed1ab_0
   - pyparsing=3.2.5=pyhcf101f3_0
   - python=3.10.18=h1a3bd86_0
   - python-dateutil=2.9.0.post0=pyhe01879c_2
   - python-tzdata=2025.2=pyhd8ed1ab_0
   - pytz=2025.2=pyhd8ed1ab_0
+  - pyzmq=27.1.0=py310hcf8288c_0
   - readline=8.3=hc2a1206_0
   - reportlab=4.4.3=py310h06a4308_0
   - setuptools=70.3.0=pyhd8ed1ab_0
   - six=1.17.0=pyhe01879c_1
   - sqlalchemy=2.0.43=py310h7e39e78_0
   - sqlite=3.50.2=hb25bd0a_1
+  - stack_data=0.6.3=pyhd8ed1ab_1
   - tk=8.6.15=h54e0aa7_0
+  - tornado=6.5.1=py310h5eee18b_0
+  - traitlets=5.14.3=pyhd8ed1ab_1
   - typing-extensions=4.15.0=h396c80c_0
   - typing_extensions=4.15.0=pyhcf101f3_0
   - tzdata=2025b=h04d1e81_0
+  - wcwidth=0.2.14=pyhd8ed1ab_0
   - wheel=0.45.1=py310h06a4308_0
   - xorg-libx11=1.8.12=h9b100fa_1
   - xorg-libxau=1.0.12=h9b100fa_0
   - xorg-libxdmcp=1.1.5=h9b100fa_0
   - xorg-xorgproto=2024.1=h5eee18b_1
   - xz=5.6.4=h5eee18b_1
+  - zeromq=4.3.5=h6a678d5_0
+  - zipp=3.23.0=pyhd8ed1ab_0
   - zlib=1.3.1=hb25bd0a_0
   - zstd=1.5.7=h11fc155_0
   - pip:
+    - chembl-structure-pipeline==1.2.2
     - click==8.3.0
+    - ipywidgets==8.1.7
+    - jupyterlab-widgets==3.0.15
     - mmpdb==3.1.3
     - peewee==3.18.2
     - rdkit==2025.3.6
     - scipy==1.15.3
+    - widgetsnbextension==4.0.14
 prefix: /home/ychen/software/miniconda3/envs/mmp_env
